--- a/model-setup.ipynb
+++ b/model-setup.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUw8GW5BzN6n",
-        "outputId": "17917906-d8b1-4b42-8fed-a8aaecba3da7"
+        "outputId": "fc741ad6-a596-4e14-966d-40bdf01f4e5f"
       },
       "outputs": [
         {
@@ -32,14 +32,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 270
         },
         "id": "VxpnCWbnuvL2",
-        "outputId": "e993ed78-3e75-4047-f95f-b2d0b4adb268"
+        "outputId": "d8f0eab1-ab8b-4b9d-c6c7-305a6c010dae"
       },
       "outputs": [
         {
@@ -69,7 +69,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bd88dccf-f680-4935-bbf9-4974621c937c\">\n",
+              "  <div id=\"df-ddb08e6a-42e2-4337-a072-1b14093e3d11\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -224,7 +224,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd88dccf-f680-4935-bbf9-4974621c937c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ddb08e6a-42e2-4337-a072-1b14093e3d11')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -275,12 +275,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bd88dccf-f680-4935-bbf9-4974621c937c button.colab-df-convert');\n",
+              "          document.querySelector('#df-ddb08e6a-42e2-4337-a072-1b14093e3d11 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bd88dccf-f680-4935-bbf9-4974621c937c');\n",
+              "          const element = document.querySelector('#df-ddb08e6a-42e2-4337-a072-1b14093e3d11');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -303,7 +303,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 2
         }
       ],
       "source": [
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "tmz8OYxMzxK9"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "id": "2FZ-0lqU5KMF"
       },
@@ -368,14 +368,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 270
         },
         "id": "ckTAY3n-GOws",
-        "outputId": "8479493c-8812-43a1-98bc-415d6ec47bda"
+        "outputId": "df8534ff-2f8c-4d10-a950-21be019fa9ba"
       },
       "outputs": [
         {
@@ -405,7 +405,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0a23a720-746c-4537-a89f-edba50652750\">\n",
+              "  <div id=\"df-27236b78-d2ab-46ed-a175-64a762d8d0bb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -560,7 +560,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a23a720-746c-4537-a89f-edba50652750')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27236b78-d2ab-46ed-a175-64a762d8d0bb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -611,12 +611,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0a23a720-746c-4537-a89f-edba50652750 button.colab-df-convert');\n",
+              "          document.querySelector('#df-27236b78-d2ab-46ed-a175-64a762d8d0bb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0a23a720-746c-4537-a89f-edba50652750');\n",
+              "          const element = document.querySelector('#df-27236b78-d2ab-46ed-a175-64a762d8d0bb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -639,7 +639,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 5
         }
       ],
       "source": [
@@ -648,13 +648,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rAiRNo_JG1ms",
-        "outputId": "5e6339bc-218c-490c-c585-4e5f4d520cf6"
+        "outputId": "ddcac078-e7e4-4039-fcb1-bf5c4da3a7f0"
       },
       "outputs": [
         {
@@ -665,7 +665,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 6
         }
       ],
       "source": [
@@ -674,36 +674,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-jWGd0ZRETcz",
-        "outputId": "698894cd-5b77-46dc-bfd5-2341c094aecc"
+        "outputId": "5eb7c221-873e-4dbe-9023-614f79313909"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1    15078225\n",
-              "2     6722445\n",
-              "0     4399255\n",
-              "Name: result, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Label precentages\n",
+            "F: 0.16791097684439937\n",
+            "C: 0.5755064184344039\n",
+            "R: 0.2565826047211967\n"
+          ]
         }
       ],
       "source": [
-        "df['result'].value_counts()"
+        "freqs = {}\n",
+        "labels = ['F', 'C', 'R']\n",
+        "counts = df['result'].value_counts()\n",
+        "print('Label precentages')\n",
+        "for i in range(len(labels)):\n",
+        "    pct = counts[i] / len(df)\n",
+        "    freqs[i] = pct\n",
+        "    print(labels[i] + ':', pct)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "m6wVj_BXIoak"
       },
@@ -726,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
         "id": "XJ8iXuAAIrUd"
       },
@@ -737,7 +741,185 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "source": [
+        "# Baseline classifier: predict each label randomly according to its frequency in the dataset\n",
+        "from random import random\n",
+        "\n",
+        "def predict(x):\n",
+        "    rand = random()\n",
+        "    if rand < freqs[0]:\n",
+        "        return 0\n",
+        "    elif rand < freqs[0] + freqs[1]:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return 2\n",
+        "\n",
+        "getLabel = lambda a: np.where(a == 1)[0][0]\n",
+        "y_true = np.apply_along_axis(getLabel, 1, y_test)\n",
+        "y_pred = np.apply_along_axis(predict, 1, np.zeros((y_true.size, 3)))\n",
+        "y_true.size == y_pred.size == y_test.shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "71YPgkruaxCj",
+        "outputId": "b8605414-192b-4f8c-c416-02c015850a2f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Results for baseline classifier\n",
+        "from sklearn import metrics\n",
+        "cm = metrics.confusion_matrix(y_true, y_pred)\n",
+        "precision = metrics.precision_score(y_true, y_pred, average='weighted')\n",
+        "recall = metrics.recall_score(y_true, y_pred, average='weighted')\n",
+        "\n",
+        "print('Precision: {}, Recall: {}\\n\\nConfusion Matrix:\\n{}'.format(precision, recall, cm))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SsU80ZJrktR2",
+        "outputId": "daf1ba44-e5d5-4857-d61a-3304809bd519"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Precision: 0.4250518809886968, Recall: 0.42526564002270234\n",
+            "\n",
+            "Confusion Matrix:\n",
+            "[[ 74049 253213 113012]\n",
+            " [253149 866889 386155]\n",
+            " [112560 387711 173255]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow\n",
+        "tf = tensorflow.compat.v1\n",
+        "tf.disable_v2_behavior()\n",
+        "pred = np.array([0.16791097684439937, 0.5755064184344039, 0.2565826047211967], dtype=np.float32)\n",
+        "preds = np.zeros(y_test.shape, dtype=np.float32)\n",
+        "for i in range(preds.shape[0]):\n",
+        "    preds[i] = pred[:]\n",
+        "cce = tf.keras.losses.CategoricalCrossentropy(from_logits=False)\n",
+        "loss_cce = cce(y_test, preds)\n",
+        "with tf.compat.v1.Session() as sess:\n",
+        "    sess.run(tf.global_variables_initializer())\n",
+        "    sess.run([loss_cce])\n",
+        "print(tf.keras.backend.get_value(loss_cce))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sveHBYUMfjXw",
+        "outputId": "ca6d6bad-878d-4020-d21e-1cf99bc39c33"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/tensorflow/python/compat/v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "non-resource variables are not supported in the long term\n",
+            "0.967167\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow import keras\n",
+        "model = keras.models.load_model('/content/drive/MyDrive/model.keras')"
+      ],
+      "metadata": {
+        "id": "-OkflLK_y2t8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred = model.predict(np.array([x_test[1]]))\n",
+        "pred[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cOrOjJ202P3g",
+        "outputId": "ab0abf28-27f9-4cb4-9094-a86685edf8f0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.45003387, 0.41593832, 0.13402787], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RzsJwCJI4O3Y",
+        "outputId": "e67ddf14-95ff-47bb-8bde-95c05ff1a89f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 0., 0.], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qgkPiCQThLDQ"
       },
@@ -764,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "w3K48lU5oXI4"
       },
@@ -800,7 +982,7 @@
       "metadata": {
         "id": "w69KFUphUNPC"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -813,12 +995,12 @@
       "metadata": {
         "id": "RK7bUGvfMmb2"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1632,7 +1814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1668,7 +1850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1760,7 +1942,7 @@
         "id": "We2BdTQNNVLZ",
         "outputId": "800f701f-d30d-4711-fb46-ce8a1a115ede"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1787,7 +1969,7 @@
         "id": "B0a2cQnuQxWM",
         "outputId": "fa31c9e3-3909-4dab-e6b8-99a8d6282c7b"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1828,7 +2010,7 @@
         "id": "1RjaYHU7XH-q",
         "outputId": "707ba455-7c7f-4989-e6b5-bf4cf0d13629"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2450,7 +2632,7 @@
         "id": "kTq4Ki90Xan-",
         "outputId": "ca938e60-57e4-4fce-b01c-b29bb2b64acb"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2476,7 +2658,7 @@
         "id": "Y79LHKKukb0i",
         "outputId": "89f61b80-1c6b-41fa-d0fb-09d7cc96b476"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2496,7 +2678,7 @@
       "metadata": {
         "id": "F4IVsCFykpti"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     }
   ],
